removed singleton managers in favour of spring beans