@@ -1,12 +1,12 @@
 package com.naeayedea.keith.commands.admin;
 
 import com.naeayedea.keith.commands.AccessLevel;
-import com.naeayedea.keith.commands.Command;
 import com.naeayedea.keith.commands.IMessageCommand;
 import com.naeayedea.keith.commands.admin.utilities.Shutdown;
 import com.naeayedea.keith.commands.admin.utilities.*;
 import com.naeayedea.keith.commands.info.Help;
-import com.naeayedea.keith.managers.UserManager;
+import com.naeayedea.keith.managers.CandidateManager;
+import com.naeayedea.keith.managers.ServerManager;
 import com.naeayedea.keith.util.MultiMap;
 import net.dv8tion.jda.api.events.message.MessageReceivedEvent;
 
@@ -15,10 +15,17 @@ import java.util.List;
 
 public class AdminUtilities extends AdminCommand {
 
-    MultiMap<String, IMessageCommand> commands;
+    private MultiMap<String, IMessageCommand> commands;
 
-    public AdminUtilities() {
+    private final ServerManager serverManager;
+
+    private final CandidateManager candidateManager;
+
+
+    public AdminUtilities(ServerManager serverManager, CandidateManager candidateManager) {
         super("utils");
+        this.serverManager = serverManager;
+        this.candidateManager = candidateManager;
         initialiseCommands();
     }
 
@@ -26,11 +33,11 @@ public class AdminUtilities extends AdminCommand {
         commands = new MultiMap<>();
         commands.put("restart", new Restart());
         commands.put("uptime", new Uptime());
-        commands.putAll(Arrays.asList("clear-cache", "clearcache", "clear"), new Clear());
+        commands.putAll(Arrays.asList("clear-cache", "clearcache", "clear"), new Clear(serverManager, candidateManager));
         commands.putAll(Arrays.asList("database", "db", "sql"), new DatabaseSearch());
         commands.putAll(Arrays.asList("shutdown", "kill"), new Shutdown());
         commands.putAll(Arrays.asList("locate", "find"), new Locate());
-        commands.putAll(Arrays.asList("help", "hlep", "dumb", "commands"), new Help(commands));
+        commands.putAll(Arrays.asList("help", "hlep", "dumb", "commands"), new Help(commands, serverManager));
     }
 
     @Override
@@ -52,7 +59,7 @@ public class AdminUtilities extends AdminCommand {
     public void run(MessageReceivedEvent event, List<String> tokens) {
         IMessageCommand command = findCommand(tokens);
         if (command != null) {
-            if (UserManager.getInstance().getUser(event.getAuthor().getId()).hasPermission(command.getAccessLevel())) {
+            if (candidateManager.getCandidate(event.getAuthor().getId()).hasPermission(command.getAccessLevel())) {
                 command.run(event, tokens);
             } else {
                 event.getChannel().sendMessage("You do not have access to this command").queue();
@@ -61,7 +68,6 @@ public class AdminUtilities extends AdminCommand {
     }
 
     private IMessageCommand findCommand(List<String> list) {
-        String commandString = list.remove(0).toLowerCase();
-        return commands.get(commandString);
+        return commands.get(list.removeFirst().toLowerCase());
     }
 }
