@@ -1,7 +1,9 @@
 package com.naeayedea.keith.commands.generic;
 
 import com.naeayedea.keith.commands.channel_commands.GuessDriver;
+import com.naeayedea.keith.managers.ChannelCommandManager;
 import com.naeayedea.keith.managers.ServerManager;
+import com.naeayedea.model.Server;
 import net.dv8tion.jda.api.entities.channel.middleman.MessageChannel;
 import net.dv8tion.jda.api.events.message.MessageReceivedEvent;
 
@@ -9,8 +11,15 @@ import java.util.List;
 
 public class Guess extends UserCommand {
 
-    public Guess() {
+    private final ServerManager serverManager;
+
+    private final ChannelCommandManager channelCommandManager;
+
+    public Guess(ServerManager serverManager, ChannelCommandManager channelCommandManager) {
         super("guess");
+
+        this.serverManager = serverManager;
+        this.channelCommandManager = channelCommandManager;
     }
 
     @Override
@@ -26,19 +35,22 @@ public class Guess extends UserCommand {
 
     @Override
     public void run(MessageReceivedEvent event, List<String> tokens) {
-        ServerManager.Server server = ServerManager.getInstance().getServer(event.getGuild().getId());
+        Server server = serverManager.getServer(event.getGuild().getId());
         MessageChannel channel = event.getChannel();
         if(tokens.isEmpty()) {
             //start default game between 1 - 100
-            new GuessDriver(server, channel, 100);
+            GuessDriver.driver(channelCommandManager, server, channel, 100).start();
         } else {
             //attempt to use user input
             try {
-                int num = Integer.parseInt(tokens.get(0));
+                int num = Integer.parseInt(tokens.getFirst());
+
                 if (num < 1 || num > 5000) {
                     throw new NumberFormatException();
                 }
-                new GuessDriver(server, channel, num);
+
+                GuessDriver.driver(channelCommandManager, server, channel, num).start();
+
             } catch (NumberFormatException e) {
                 channel.sendMessage("Invalid number! Please enter an integer between 1 and 5000 or do \""+server.getPrefix()+"guess\" to generate a number between 1 - 100").queue();
             }
